try out 'resolve' and 'plugins' fields in webpack config file

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,5 +2,5 @@ $green: #000000;
 $white: #FFFFFF;
 
 div {
-    background: url(green-apple.jpg);
+    background: url(green-apple.jpg) no-repeat;
 }
